# oriself-next-app

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  deploy.sh  docker-compose.yml
.github/workflows/: bump-skill.yml  ci.yml
deploy/: Dockerfile.fly  fly.toml  vercel.json
docs/: v2.6-on-demand-design.md
ops/: README.md  ecosystem.config.cjs  oriself.sh
server/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
server/oriself_server/: __init__.py  cli.py  database.py  guardrails.py  llm_client.py  main.py  models.py  quill.py  schemas.py  skill_loader.py  skill_runner.py
server/oriself_server/routes/: feedback.py  issues.py  letters.py
server/oriself_server/utils/: html_sanitize.py  prompt_sanitize.py
server/scripts/: smoke_gemini_self_test.py
server/tests/: test_converge_html_extract.py  test_guardrails.py  test_schemas.py  test_skill_loader.py  test_skill_runner.py  test_v23_guardrails.py  test_v24_smoke.py  test_v26_on_demand.py
web/: .dockerignore  .env.local.example  CLAUDE.md  Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/app/issues/[slug]/: page.tsx
web/components/: masthead.tsx
web/components/feedback/: feedback-sheet.tsx
web/components/history/: history-sync.tsx
web/components/home/: recent-letters.tsx
web/components/issue/: arrival-ceremony.tsx  issue-chrome.tsx
web/components/letter/: composer.tsx  quill-note.tsx  thinking-trail.tsx  turn.tsx
web/lib/: api.ts  history.ts  markdown.tsx  types.ts  version.ts
(+6 files in other folders)
